--- a/Info Simulator.plist
+++ b/Info Simulator.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFile</key>
 	<string>main_icon.png</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.${PRODUCT_NAME:identifier}</string>
+	<string>com.planbresearch.webgnosus</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
